# rsomics-limma-ebayes

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  ebayes.rs  fit.rs  lib.rs  matrix.rs  special.rs
tests/: compat.rs  ebayes_oracle.R  mkfixture.R
tests/golden/: constvar_expr.tsv  constvar_top.coef2.expected.tsv  design.tsv  equalvar_design.tsv  equalvar_expr.tsv  equalvar_top.coef2.expected.tsv  expr.tsv  top.coef2.expected.tsv
