[package]
name = "rsomics-limma-ebayes"
version = "0.1.4"
description = "Per-gene linear model fit (lmFit) plus empirical-Bayes moderated t-statistics (eBayes) for a log-expression matrix — a clean-room Rust reimplementation of limma's lmFit + eBayes + topTable"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-limma-ebayes"
path = "src/main.rs"

[lib]
name = "rsomics_limma_ebayes"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-ebayes-core = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
ryu = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
